--- a/creditsea-frontend/package.json
+++ b/creditsea-frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "assignment": "file:..",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.0",
     "react": "^19.0.0",
