--- a/package.json
+++ b/package.json
@@ -141,7 +141,9 @@
         "xmlbuilder": "^11.0.1",
         "xtend": "^4.0.2"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    },
     "author": "",
     "license": "ISC",
     "description": ""
